# AdventureMods

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  MODS.md  Makefile  README.md  cleanup-diagnostic.txt  clippy-error.txt  current-clippy-error.txt  final-clippy-error.txt  meson.build
.github/workflows/: appimage.yml  apply-ui-animation-optimizations.yml  apply-version-bump.yml  capture-clippy-error.yml  capture-current-clippy.yml  ci.yml  clean-ui-animation-optimizations.yml  fix-proton-review.yml  fix-ui-animation-clippy.yml  refactor-mod-preview.yml  tests.yml
build-aux/: cargo-build.sh  cargo-sources.json  cargo-test.sh  check-cargo-sources.py  extract-release-notes.py  io.github.astrovm.AdventureMods.Devel.json  io.github.astrovm.AdventureMods.json  test-cargo-test.sh  test-flatpak-package.sh
build-aux/appimage/: build-appimage.sh  build-container.sh
build-aux/appimage/apprun-hooks/: adventure-mods.sh
build-aux/flatpak/: 7zip.json  hdiffpatch.json
data/: io.github.astrovm.AdventureMods.desktop.in  io.github.astrovm.AdventureMods.gschema.xml  io.github.astrovm.AdventureMods.metainfo.xml.in  meson.build  resources.gresource.xml
data/resources/: style.css
data/resources/ui/: game_card.ui  progress_page.ui  setup_page.ui  welcome_page.ui  window.ui
po/: POTFILES.in  meson.build
src/: application.rs  banner.rs  banner.txt  blocking.rs  cli.rs  cli_tests.rs  config.rs  config.rs.in  display.rs  lib.rs  main.rs  meson.build  path_display.rs  window.rs
src/setup/: common.rs  common_tests.rs  config.rs  mod.rs  pipeline.rs  sa2.rs  sa2_catalog.rs  sa2_config.rs  sadx.rs  sadx_catalog.rs  sadx_config.rs  steps.rs  types.rs
src/steam/: game.rs  library.rs  library_tests.rs  mod.rs  vdf.rs  vdf_tests.rs
src/ui/: game_card.rs  mod.rs  progress_page.rs  setup_page.rs  test_util.rs  welcome_page.rs
tests/: cargo_sources.rs  cli.rs  detection_helpers.rs  download.rs  e2e_sa2.rs  e2e_sadx.rs
tests/support/: http_server.rs  mod.rs  scripts.rs  steam_fixture.rs
