[package]
name = "adventure-mods"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
gtk = { version = "0.11", package = "gtk4", features = ["v4_18"] }
adw = { version = "0.9", package = "libadwaita", features = ["v1_7"] }
glib = "0.22"
gio = "0.22"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "webpki-roots", "stream", "json"] }
async-channel = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6"
futures-util = "0.3"
tempfile = "3"
