[package]
name = "adventure-mods"
version = "0.3.0"
edition = "2024"
license = "MIT"

[dependencies]
gtk = { version = "0.11", package = "gtk4", features = ["v4_18"] }
adw = { version = "0.9", package = "libadwaita", features = ["v1_7"] }
glib = "0.22"
gio = "0.22"
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "webpki-roots", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
async-channel = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6"
futures-util = "0.3"
tokio = { version = "1", features = ["rt"] }
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.6", features = ["derive"] }
console = "0.15"
dialoguer = "0.12"
